<resources>
    <string name="app_name">WalkInClinicApp</string>

    //MainActivity
    <string name="welcome">Welcome To The Walk In Clinic App</string>
    <string name="username">Enter Username:</string>
    <string name="password">Enter Password:</string>
    <string name="signupText">Don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="email">Enter email:</string>
    <string name="signup">SIGN UP</string>

    //SignupActivity
    <string name="employeeSignup">Create an account:</string>
    <string name="typeText">Type of Account:</string>
    <string name="patientText">Patient</string>
    <string name="employeeText">Employee</string>
    <string name="repassword">Renter Password:</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="insurancetext">Type of Insurance</string>
    <string name="paytext">Type of Payment</string>
    <string name="fullname">Full Name</string>
    <string name="settime">Start Time</string>
    <string name="setendtime">End Time</string>

    //EmployeeWorkingHours
    <string name="wordTo">To</string>>

    //Search Appointment
    <string-array name="WeekDays">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>
