<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.Employee.ProfileActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="294dp"
        android:layout_height="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="27dp"
        android:editable="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/address"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addressText"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/addressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/phonetext"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fullname"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fullnametext"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/fullnametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.597"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/phonetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/insuranceType"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="27dp"
        android:orientation='horizontal'
        app:layout_constraintBottom_toTopOf="@+id/payType"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/insuranceuhip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="UHIP"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="462dp" />

        <RadioButton
            android:id="@+id/insuranceohip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OHIP"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="462dp" />

        <RadioButton
            android:id="@+id/insuranceno"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="No"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="462dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/payType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paytext"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="532dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="27dp"
        android:orientation='horizontal'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payType"
        app:layout_constraintVertical_bias="0.12"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <RadioButton
            android:id="@+id/paycreditcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"

            android:text="Credit Card"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="546dp" />

        <RadioButton
            android:id="@+id/paydebitcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Debit Card"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="546dp" />

        <RadioButton
            android:id="@+id/paycash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Cash"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="546dp" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="655dp" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="655dp" />

    <TextView
        android:id="@+id/insuranceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/insurancetext"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>